<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayout">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1"
        tools:ignore="MissingConstraints">

        <TableRow android:background="#128675">
            <TextView
                android:layout_column="0"
                android:padding="3dip"
                android:text="@string/producto"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/subtotal"
                android:textColor="@android:color/white"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="0"
                android:padding="3dip"
                android:text="Jabon de manos x 1"
                />

            <TextView
                android:layout_column="2"
                android:gravity="left"
                android:padding="3dip"
                android:text="$2"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="0"
                android:padding="3dip"
                android:text="Shampoo Monster x 1"
                />

            <TextView
                android:layout_column="2"
                android:gravity="left"
                android:padding="3dip"
                android:text="$10"
                />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="3dip"
                android:text="Pastas Duria x 2"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="left"
                android:padding="3dip"
                android:text="$18"
                />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="3dip"
                android:text="Detergente Limpiadin x 1"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="left"
                android:padding="3dip"
                android:text="$13,4"
                />
        </TableRow>

        <View android:layout_height="2dip"
            android:background="#FF909090"/>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/subtotal"
                android:textColor="#128675"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="right"
                android:layout_gravity="left"
                android:padding="3dip"
                android:text="$43,4"
                />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/envio"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="right"
                android:layout_gravity="left"
                android:padding="3dip"
                android:text="$10"
                />

        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/cupon"
                android:textColor="#128675"
                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="right"
                android:layout_gravity="left"
                android:padding="3dip"
                android:text="-$5"
                />

        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/total"
                android:textColor="#128675"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="right"
                android:layout_gravity="left"
                android:padding="3dip"
                android:text="$48,4"
                />

        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">
<Button android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_weight=".5"
    android:text="@string/salir"
    android:textAllCaps="false"
    android:onClick="finalizarActividad"/>


        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>